--- a/assets/main.css
+++ b/assets/main.css
@@ -312,13 +312,19 @@
   letter-spacing: 1.4px;
   padding: 5px 0px;
 }
+.template-product .product-info .product-personalizer .mains-wrapper .pplr-wrapper .label-with-check {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 7px;
+       column-gap: 7px;
+}
 .template-product .product-info .product-personalizer .mains-wrapper .pplr-wrapper .pplrlabel {
   color: #1C1C1C;
   font-family: Nunito Sans;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 14px;
+  line-height: 16px;
   letter-spacing: 1.4px;
   width: -moz-fit-content;
   width: fit-content;
@@ -371,16 +377,16 @@
   height: 90px !important;
   max-width: initial;
 }
-.template-product .product-info .ptw-app-label, .template-product .product-info .pplr-checkbox .pplrlabel {
+.template-product .product-info .ptw-app-label, .template-product .product-info .pplr-wrapper .pplrlabel {
   /* Hide the default checkbox */
 }
-.template-product .product-info .ptw-app-label input[type=checkbox], .template-product .product-info .pplr-checkbox .pplrlabel input[type=checkbox] {
+.template-product .product-info .ptw-app-label input[type=checkbox], .template-product .product-info .pplr-wrapper .pplrlabel input[type=checkbox] {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
   height: 16px;
 }
-.template-product .product-info .ptw-app-label input[type=checkbox]:before, .template-product .product-info .pplr-checkbox .pplrlabel input[type=checkbox]:before {
+.template-product .product-info .ptw-app-label input[type=checkbox]:before, .template-product .product-info .pplr-wrapper .pplrlabel input[type=checkbox]:before {
   transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
   border: 1px solid;
   border-radius: 22px;
@@ -395,7 +401,7 @@
   transition-property: background-color, border-color;
   width: 16px;
 }
-.template-product .product-info .ptw-app-label input[type=checkbox]:checked:before, .template-product .product-info .pplr-checkbox .pplrlabel input[type=checkbox]:checked:before {
+.template-product .product-info .ptw-app-label input[type=checkbox]:checked:before, .template-product .product-info .pplr-wrapper .pplrlabel input[type=checkbox]:checked:before {
   background: radial-gradient(#0500FF 0%, #0500FF 50%, transparent 60%, transparent);
   border-color: #343434;
 }
