--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -341,13 +341,18 @@
             letter-spacing: 1.4px;
             padding: 5px 0px;
           }
+          .label-with-check{
+            display: flex;
+            align-items: center;
+            column-gap: 7px;
+          }
           .pplrlabel{
             color: #1C1C1C;
             font-family: Nunito Sans;
             font-size: 14px;
             font-style: normal;
             font-weight: 400;
-            line-height: 14px;
+            line-height: 16px;
             letter-spacing: 1.4px;
             width: fit-content;
             padding: 0px;
@@ -399,7 +404,7 @@
         }
       }
     }
-    .ptw-app-label,.pplr-checkbox .pplrlabel{
+    .ptw-app-label,.pplr-wrapper .pplrlabel{
       /* Hide the default checkbox */
       input[type="checkbox"]{
         appearance: none;
