--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -234,7 +234,7 @@ Supported variables
             {%- endif -%}
 
           {%- when 'variant_picker' -%}
-            {%- if product != blank -%}
+            {%- if product != blank and product.variants.size > 1 -%}
               {%- render 'variant-picker',
                   product: product,
                   form_id: product_form_id,
@@ -588,14 +588,14 @@ Supported variables
           {%- assign inside_block_group_context = true -%}
 
           {% if block.type =='feature_with_icon_v2'%}
-            <scroll-wrapper-slider class="without-scroll without-arrows">
+            <scroll-wrapper-slider class="without-scroll without-arrows block-product-feature_with_icon_v2">
               <span class="arrow-slider left-button">{% render 'arrow-slider-left' %}</span>
               <span class="arrow-slider right-button">{% render 'arrow-slider-left' %}</span>
           {%endif%}
           <div class="product-info__block-group {{ block_group_class }}" data-group-type="{{ block_group_name }}">
         {%- endif -%}
 
-        <div class="product-info__block-item" data-block-type="{{ block.type | replace: '_', '-' }}" {% unless block.type == '@app' or block.type == 'accordion' %}{{ block.shopify_attributes }}{% endunless %}>
+        <div class="product-info__block-item product-info-type-{{ block.type | replace: '_', '-' }}" data-block-type="{{ block.type | replace: '_', '-' }}" {% unless block.type == '@app' or block.type == 'accordion' %}{{ block.shopify_attributes }}{% endunless %}>
           {{- block_content -}}
         </div>
       {%- endif -%}
