--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -74,7 +74,7 @@
     }
 
     //working on second short text
-    .product-info__block-item[data-block-type="text"]:nth-child(2) {
+    .product-info-type-text:nth-child(-n + 2) {
       .prose :where(h1, h2, h3, h4, h5, h6) {
         font-family: Nunito Sans;
         font-size: 16px;
@@ -85,7 +85,7 @@
         text-transform: uppercase;
       }
     }
-    .product-info__block-item[data-block-type="text"]:nth-child(3) {
+    .product-info-type-text:nth-child(even) {
       color: #343434;
       font-family: Nunito Sans;
       font-size: 16px;
@@ -261,6 +261,7 @@
           font-weight: 600;
           line-height: normal;
           text-transform: uppercase;
+          padding: 0px;
         }
       }
     }
@@ -611,5 +612,46 @@
         }
       }
     }
+  }
+}
+
+
+
+//working on spacing between elemnts
+.product-Yonder-dev{
+  .product-info__block-list{
+    .product-info__block-item[data-block-type="title-with-rating"]{
+      margin-block-end: 0.813rem;
+    }
+    .product-info-type-text:nth-child(-n + 2) {
+      margin-block-start: 0rem;
+      margin-block-end: 1.063rem;
+    }
+    .product-info__block-item[data-block-type="price"]{
+      margin-block-start: 0rem;
+      margin-block-end: 1.25rem;
+    }
+    
+    .product-info-type-text:nth-child(even){
+      margin-block-start: 0rem;
+      margin-block-end: 1.75rem;
+    }
+    
+    .product-info__block-item[data-block-type="product-variations"] {
+      margin-block-start: 0rem;
+      margin-block-end: 1.625rem;
+    }
+    .product-info__block-item[data-block-type="buy-buttons-with-quantity"] {
+      margin-block-start: 0rem;
+      margin-block-end: 2.25rem;
+      .scroll-customize-wrapper-mrb{
+        margin-block-end: 1.438rem;
+      }
+    }
+    .block-product-feature_with_icon_v2{
+      margin-block-start: 0rem;
+      margin-block-end: 2.25rem;
+    }
+    
   }
 }
