--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -10,8 +10,12 @@
       }
     }
   }
+  .product{
+    @media screen and (max-width: 999px) {
+      gap: var(--product-gap, 1.5rem);
+    }
+  }
   product-gallery {
-    
     .product-gallery__thumbnail[aria-current="true"] {
       padding: 0px;
       &[aria-current="true"] {
@@ -29,6 +33,9 @@
         z-index: 2;
         top: 10px;
         left: 10px;
+        @media screen and (max-width: 999px) {
+          left: -10px;
+        }
         .Badge-item {
           background-color: #1c1c1c;
           color: #fff;
@@ -45,7 +52,12 @@
         }
       }
     }
+    //product gallery responsive part
+    @media screen and (max-width: 999px) {
+      --product-gallery-carousel-grid: auto / auto-flow min(28rem, 90vw);
+    }
   }
+
 
   .product-info {
     //product callout
@@ -61,6 +73,11 @@
         line-height: normal;
         letter-spacing: 6px;
         text-transform: uppercase;
+        @media screen and (max-width: 999px) {
+          font-size: 20px;
+          font-weight: 600;
+          letter-spacing: 4px;
+        }
       }
       .loox-rating-content {
         color: #1c1c1c;
@@ -152,6 +169,9 @@
           font-style: normal;
           font-weight: 400;
           line-height: normal;
+          @media screen and (max-width: 999px) {
+            font-size: 16px;
+          }
           .text-subdued {
             color: inherit;
           }
@@ -159,13 +179,17 @@
         //option images
         .h-stack.variant-picker__option-values {
           column-gap: 13px;
+          @media screen and (max-width: 999px) {
+            column-gap: 12px;
+          }
           .media-swatch {
             border-radius: 22px;
             border-color: #BEBEBE;
             aspect-ratio: 1;
-            @media screen and (min-width: 700px) {
               --swatch-size: 6.938rem;
-            }
+              @media screen and (max-width: 999px) {
+                --swatch-size: 5.875rem;
+              }
             &.is-selected{
               border-color: $active-color;
             }
@@ -181,6 +205,9 @@
       .container_buy_box{
         display: flex;
         column-gap: 22px;
+        @media screen and (max-width: 999px) {
+          column-gap: 11px;
+        }
         flex-direction: row-reverse;
         buy-buttons{
           flex: 1;
@@ -195,6 +222,11 @@
             letter-spacing: 1.4px;
             text-transform: uppercase;
             column-gap: 8px;
+            @media screen and (max-width: 999px) {
+              column-gap: 6px;
+              padding-left: 10px;
+              padding-right: 10px;
+            }
             &:hover{
               color: #1C1C1C;
             }
@@ -236,6 +268,10 @@
             font-weight: 600;
             line-height: 22px; /* 137.5% */
             letter-spacing: 0.8px;
+            @media screen and (max-width: 999px) {
+              font-size: 14px;
+              letter-spacing: 0.7px;
+            }
         }
       }
     }
@@ -271,6 +307,9 @@
     .product_customizar_options{
       display: flex;
       column-gap: 20px;
+      @media screen and (max-width: 999px) {
+        column-gap: 13px;
+      }
     }
 
     //Adjust personalizer ZEPTO
@@ -285,6 +324,9 @@
       background: #F9F9F9;
       margin-bottom: 0px !important;
       width: 350px;
+      @media screen and (max-width: 999px) {
+        width: 320px;
+      }
       .pplr-wrapper.pplr-checkbox[data-main="1"]{
         width: 100%;
         display: flex;
@@ -446,6 +488,9 @@
       background: #F9F9F9;
       margin-bottom: 0px !important;
       width: 350px;
+      @media screen and (max-width: 999px) {
+        width: 320px;
+      }
       .ptw-app-desc{
         flex: 1;
         label[for="ptw-gift-needed"]{
@@ -520,7 +565,7 @@
     }
 
     //complimentaory product
-    .product-info__block-item[data-block-type="complementary-products"]{
+    .product-info__block-item[data-block-type="complementary_products_v2"]{
       .complementary-products__header {
         p{
           color: #1C1C1C;
